crates/capsec/tests/compile_fail/async_open_cannot_write.stderr
error[E0277]: the trait bound `AsyncReadFile: AsyncWrite` is not satisfied
 --> tests/compile_fail/async_open_cannot_write.rs:9:45
  |
9 |         tokio::io::AsyncWriteExt::write_all(&mut file, b"nope").await.unwrap();
  |         ----------------------------------- ^^^^^^^^^ the trait `AsyncWrite` is not implemented for `AsyncReadFile`
  |         |
  |         required by a bound introduced by this call
  |
  = help: the following other types implement trait `AsyncWrite`:
            &mut T
            AsyncWriteFile
            Box<T>
            BufStream<RW>
            DuplexStream
            Pin<P>
            SimplexStream
            Vec<u8>
          and $N others
note: required by a bound in `tokio::io::AsyncWriteExt::write_all`
 --> $CARGO/tokio-$VERSION/src/io/util/async_write_ext.rs
  |
  |     pub trait AsyncWriteExt: AsyncWrite {
  |                              ^^^^^^^^^^ required by this bound in `AsyncWriteExt::write_all`
...
  |         fn write_all<'a>(&'a mut self, src: &'a [u8]) -> WriteAll<'a, Self>
  |            --------- required by a bound in this associated function

error[E0277]: the trait bound `AsyncReadFile: AsyncWrite` is not satisfied
 --> tests/compile_fail/async_open_cannot_write.rs:9:65
  |
9 |         tokio::io::AsyncWriteExt::write_all(&mut file, b"nope").await.unwrap();
  |         ------------------------------------------------------- ^^^^^ the trait `AsyncWrite` is not implemented for `AsyncReadFile`
  |         |
  |         this call returns `AsyncReadFile`
  |
  = help: the following other types implement trait `AsyncWrite`:
            &mut T
            AsyncWriteFile
            Box<T>
            BufStream<RW>
            DuplexStream
            Pin<P>
            SimplexStream
            Vec<u8>
          and $N others
  = note: required for `tokio::io::util::write_all::WriteAll<'_, AsyncReadFile>` to implement `Future`
  = note: required for `tokio::io::util::write_all::WriteAll<'_, AsyncReadFile>` to implement `IntoFuture`
help: remove the `.await`
  |
9 -         tokio::io::AsyncWriteExt::write_all(&mut file, b"nope").await.unwrap();
9 +         tokio::io::AsyncWriteExt::write_all(&mut file, b"nope").unwrap();
  |
